--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -9,9 +9,16 @@ main{
     justify-items: center;
 }
 
-canvas {
+#canvas {
     background-color: rgba(0, 0, 0, 0.100);
     margin: auto;
-    width: 480px;
-    height: 720px;
+    height: 480px;
+    width: 100%;
+    position: relative;
+    overflow: hidden;
+}
+
+#plane{
+    width: 100px;
+    height: 50px;
 }
