--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -24,7 +24,7 @@
     background-repeat: repeat-x;
     background-size: contain;
     height: 100%;
-    animation: moveBackground 200s linear infinite;
+    /* animation: moveBackground 200s linear infinite; */
 }
 
 /* .gamebg {
@@ -48,8 +48,8 @@
 } */
 
 #plane{
-    width: 100px;
-    height: 50px;
+    width: 80px;
+    height: 40px;
     z-index: 1;
 }
 
@@ -73,8 +73,12 @@
     background-color: rgb(255, 136, 0);
 }
 
+.game-group {
+    position: absolute;
+}
+
 .enemy{
     position: absolute;
-    width: 40px;
-    height: 180px;
+    width: 50px;
+    height: 270px;
 }
