--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -113,9 +113,9 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: rgba(0, 0, 0, 0.5); /* semi-transparent black background */
+  background-color: rgba(0, 0, 0, 0.5);
   z-index: 50;
-  display: none; /* Initially hidden */
+  display: none;
 }
 
 #start-screen button {
