--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -81,7 +81,7 @@
   text-align: center;
   width: 100%;
   text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000,
-    1px 1px 0 #000; /* Black stroke */
+    1px 1px 0 #000;
   top: 50%; /* Center vertically */
   transform: translateY(-50%); /* Center vertically */
 }
