--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -82,7 +82,7 @@
   width: 100%;
   text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000,
     1px 1px 0 #000;
-  top: 50%; /* Center vertically */
+  top: 50%;
   transform: translateY(-50%); /* Center vertically */
 }
 
