--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -83,7 +83,7 @@
   text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000,
     1px 1px 0 #000;
   top: 50%;
-  transform: translateY(-50%); /* Center vertically */
+  transform: translateY(-50%);
 }
 
 .game-group {
